Added PersonalDetails page, delete button to dressings, simplified colorimetric analysis methods

--- a/app/src/main/res/layout/fragment_yourdata.xml
+++ b/app/src/main/res/layout/fragment_yourdata.xml
@@ -23,6 +23,7 @@
                     <TextView
                         android:fontFamily="sans-serif"
                         android:padding="3dip"
+                        android:id="@+id/personalDetails"
                         android:text="Personal Details"
                         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                         android:textColor="@color/white"
