--- a/app/src/main/res/layout/activity_registered_dressings.xml
+++ b/app/src/main/res/layout/activity_registered_dressings.xml
@@ -32,6 +32,12 @@
             android:textSize="32sp"
             />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dip"
+            android:layout_below="@+id/table1reg"
+            android:background="@color/colorAccentCUSTOM" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
