--- a/app/src/main/res/layout/recycler_item_reg_dressings.xml
+++ b/app/src/main/res/layout/recycler_item_reg_dressings.xml
@@ -93,6 +93,19 @@
                     android:layout_below="@+id/textViewQR"
                     />
             </TableRow>
+
+            <TableRow>
+
+                <Button
+                    android:id="@+id/buttonDeleteDressing"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/colorAccentCUSTOM"
+                    android:padding="12dp"
+                    android:text="Delete Dressing"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="#000000" />
+            </TableRow>
         </TableLayout>
 
         <View
